--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,15 @@
-SUBDIRS=logger
+SUBDIRS=logger csvfile libjeugddag
 bin_PROGRAMS=jeugddagcli
 
+INCLUDES=\
+	-I$(top_srcdir)/src/csvfile \
+	-I$(top_srcdir)/src/libjeugddag
+
 jeugddagcli_SOURCES=\
-	CSVFile.cpp \
-	WorkshopCollection.cpp \
-	InschrijvingsLijst.cpp \
-	Workshop.cpp \
-	WorkshopSessie.cpp \
-	Kind.cpp \
-	jeugddag-cli.cpp
+		jeugddag-cli.cpp
 	
-jeugddagcli_LDADD=$(top_builddir)/src/logger/liblogger.la
+jeugddagcli_LDADD=\
+	$(top_builddir)/src/logger/liblogger.la \
+	$(top_builddir)/src/libjeugddag/libjeugddag.la \
+	$(top_builddir)/src/csvfile/libcsvfile.la
 
