Adding friends to the sorting algorithm

--- a/src/libjeugddag/Makefile.am
+++ b/src/libjeugddag/Makefile.am
@@ -8,5 +8,6 @@ libjeugddag_la_SOURCES=\
 	Workshop.cpp \
 	WorkshopSessie.cpp \
 	Kind.cpp \
+	Inschrijving.cpp \
 	InschrijvingsLijst.cpp \
 	jeugddag.cpp
